--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
 Flask
-gunicorn
-google-cloud-dialogflow
 psycopg2-binary
-twilio
 requests
-
-
-
-@db.lzqmvfueyiugigqrwhhx.supabase.co:5432/postgres
+haversine
+gunicorn
